css/style.css
:root {
  /* Neutrals */
  --white: hsl(0, 0%, 100%);
  --stone-100: hsl(30, 54%, 90%);
  --stone-150: hsl(30, 18%, 87%);
  --stone-600: hsl(30, 10%, 34%);
  --stone-900: hsl(24, 5%, 18%);

  /* Primary / Accents */
  --brown-800: hsl(14, 45%, 36%);
  --rose-800: hsl(332, 51%, 32%);
  --rose-50: hsl(330, 100%, 98%);
}
* {
  box-sizing: border-box;
}
body {
  padding: 0;
  margin: 0;
  background-color: var(--stone-100);
  font-family: 'Outfit', sans-serif;
}
.young-serif {
  font-family: 'Young Serif', serif;
  font-weight: 400;
}
:where(ol, ul) {
  display: flex;
  flex-direction: column;
  gap: 0.6rem;
  padding-left: 1.6em;
}
li {
  color: var(--stone-600);
  font-size: 1.2rem;
  padding-left: 1.1rem; 
}
.recipe {
  background-color: var(--white);
}
.recipe h2.title {
  font-size: 2rem;
  color: var(--brown-800);
  margin-bottom: 0;
}
.recipe figure {
  margin: 0;
  padding: 0;
  max-width: 100vw;
}
.recipe figure img {
  width: 100%;
}
.recipe .content {
  padding: 1.75rem;
}
.recipe .content .intro header {
  margin-bottom: 3rem;
}
.recipe .content .intro header .title {
  font-size: 2.5rem;
  line-height: 1;
  margin-top: 0;
}
.recipe .content .intro header .desc {
  font-size: 1.15rem;
  line-height: 1.75;
  color: var(--stone-600);
  font-weight: 500;
}
.recipe .content .intro .preparation-time {
  background-color: var(--stone-100);
  padding: 1.25rem;
  border-radius: 1.25rem;
}
.recipe .content .intro .preparation-time .title {
  color: var(--rose-800);
  font-size: 1.4rem;
  margin: 0;
}
.recipe .content .intro .preparation-time ul li::marker {
  color: var(--rose-800);
}
.recipe .content .intro .preparation-time ul li span {
  font-weight: 700;
}
.recipe .content .instructions li {
  line-height: 1.75;
}
.recipe .content .instructions li span {
  font-weight: 700;
}
.recipe .content :where(.ingredients, .instructions) li::marker {
  color: var(--brown-800);
  font-weight: 700;
}
.recipe .content .nutrition .title {
  margin: 1rem 0;
}
.recipe .content .nutrition table {
  width: 100%;
}
.recipe .content .nutrition table caption {
  text-align: left;
  margin-bottom: 1rem;
  color: var(--stone-600);
}
.recipe .content .nutrition table td.tag {
  color: var(--stone-600);
}
.recipe .content .nutrition table td:not(.tag) {
  color: var(--brown-800);
  font-weight: 600;
}
.recipe .content .nutrition table td {
  padding: 0.5rem;
}
.recipe .content .nutrition table tr:not(:last-child) td {
  border-bottom: 1px solid #ddd;
  padding: 0.75;
}
@media (min-width: 767px) {
  body {
    padding: 4rem 20%;
  }
  .recipe {
    border-radius: 1rem;
    padding: 1.75rem;
  }
  .recipe figure {
    margin-bottom: 1.25rem;
    border-radius: 0.5em;
    overflow: hidden;
  }
  .recipe .content {
    padding: 0;
  }
}

